syntax = "proto2";
option java_package = "fk.prof.common.proto";
option java_outer_classname = "AggregatedProfileModel";

// Additional properties computed for the context
message ContextProps {
	optional uint32 sampleCount = 1;
}

// context containing metadata. For each context we have 2 stackStrace tree: 
//  - called by Thread.run()
//  - others are unclassifiable
message Context {
	required string name = 1;
	optional ContextProps props = 2;
}

// represents list of contexts. 
message ContextList {
	repeated Context context = 1;
}
message MethodLookUp {
	repeated string fqdn = 1;
}

// Represents the node of the stackTrace tree. Each node has methodId, line no.
// childCount and the associated data.
message FrameNode {
	required uint32 methodId = 1;
	required uint32 childCount = 2;
	optional uint32 lineNo = 3;
	optional CPUSamplingNodeProps cpuSamplingProps = 4;	
}

// List of node representing a tree. List is populated in dfs manner.
message FrameTree {
	repeated FrameNode threadRunNodes = 1;
	repeated FrameNode unclassifiableNodes = 2;
}

message CPUSamplingNodeProps {
	optional uint32 onCpuSamples = 1;
	optional uint32 onStackSamples = 2;
}

enum WorkType {
	cpu_sample_work = 0;
	thread_sample_work = 1;
	monitor_contention_work = 2;
	monitor_wait_work = 3;
}

message Header {
	required uint32 formatVersion = 1;
	optional string appId = 2;
	optional string clusterId = 3;
	optional string profileStartTime = 4;
	optional string profileEndTime = 5;
	optional WorkType workType = 6;
}
